--- a/MIS3371/homework1.html
+++ b/MIS3371/homework1.html
@@ -28,7 +28,7 @@
 <!-- LOGO -->
                         <img 
                             id="logo" 
-                            src="lcrvlogo.png" 
+                            src="HW1_MIS3371_logo.jpg" 
                             alt="A caduceus on top of a stethoscope"
                         >
                     </td>
@@ -451,3 +451,4 @@
 
 <!-- End of file: homework1.html -->
 </html>
+
