--- a/MIS3371/homework1.html
+++ b/MIS3371/homework1.html
@@ -29,11 +29,11 @@
                         <img 
                             id="logo" 
                             src="HW1_MIS3371_logo.jpg" 
-                            alt="A caduceus on top of a stethoscope"
+                            alt="A caduceus and a stethoscope"
                         >
                     </td>
 <!-- TITLE -->
-                    <td valign="top"><span id="title">CougarCare Medical</span></td>
+                    <td valign="middle"><span id="title">CougarCare Medical</span></td>
 <!-- DATE -->
                     <td valign="bottom" align="right">Today is: <span id="today">Date goes here </span></td>
                 </tr>
@@ -81,7 +81,7 @@
                                 required
                                 oninvalid="this.setCustomValidity('Last Name is Required')"
                                 oninput="this.setCustomValidity('')"
-                                placeholder="Public (req'd)"
+                                placeholder="(req'd)"
                             >
                             <span id="name_text"></span>
                         </td>
@@ -451,4 +451,5 @@
 
 <!-- End of file: homework1.html -->
 </html>
+
 
