--- a/MIS3371/index.html
+++ b/MIS3371/index.html
@@ -33,7 +33,7 @@
                         >
                     </td>
 <!-- TITLE -->
-                    <td valign="middle"><span id="title">CougarCare Medical</span></td>
+                    <td valign="middle"><span id="title">CougarCare lol Medical</span></td>
 <!-- DATE -->
                     <td valign="bottom" align="right">Today is: <span id="today">Date goes here </span></td>
                 </tr>
@@ -451,6 +451,7 @@
 
 <!-- End of file: homework1.html -->
 </html>
+
 
 
 
