--- a/MIS3371/index.html
+++ b/MIS3371/index.html
@@ -1,4 +1,4 @@
- <!doctype html>
+  <!doctype html>
 <!-- 
 
     Program: Homework1.html
@@ -28,12 +28,12 @@
 <!-- LOGO -->
                         <img 
                             id="logo" 
-                            src="HW1_MIS3371_logo.jpg" 
-                            alt="A caduceus and a stethoscope"
+                            src="HW1_MIS3371_logo_noBG.png" 
+                            alt="A caduceus with a stethoscope"
                         >
                     </td>
 <!-- TITLE -->
-                    <td valign="middle"><span id="title">CougarCare lol Medical</span></td>
+                    <td valign="bottom"><span id="title">CougarCare Medical</span></td>
 <!-- DATE -->
                     <td valign="bottom" align="right">Today is: <span id="today">Date goes here </span></td>
                 </tr>
@@ -451,6 +451,7 @@
 
 <!-- End of file: homework1.html -->
 </html>
+
 
 
 
