--- a/MIS3371/index.html
+++ b/MIS3371/index.html
@@ -271,7 +271,7 @@
                             <label for="email">Email Address</label>
                         </td>
                         <td>
-                            <input type="text" 
+                            <input type="email" 
                                 size="20" 
                                 maxlength="40" 
                                 id="email" 
@@ -451,6 +451,7 @@
 
 <!-- End of file: homework1.html -->
 </html>
+
 
 
 
